@@ -22,7 +22,7 @@
 ?>
 <?php
 
-$gallery->version = '1.5.2-RC2-cvs-b12';
+$gallery->version = '1.5.2-RC2-cvs-b13';
 $gallery->config_version = 96;
 $gallery->album_version = 37;
 $gallery->user_version = 6;
