@@ -1,3 +1,8 @@
+2006-01-06 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b13
+
+ * Fix: getLanguageAlias() was buggy,
+        but appeared only in some environtments in combination with Joomla! and/or Mambo.
+
 2006-01-06 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b12
 
  * Update Copyright to 2006.
